Fixed some styling spacing issues

--- a/css/style.scss
+++ b/css/style.scss
@@ -123,8 +123,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     text-align: left;
-    margin-top: 5px;
-    margin-bottom: 10px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     
     h1 {
         font-family: $headingfont;
@@ -148,11 +148,6 @@
 
         p {
             margin-bottom: 40px;
-        }
-        ~.border_wrapper img {
-            height: 100%;
-            width: 10%;
-            
         }
     }
 }
@@ -184,11 +179,13 @@
     place-items: center;
     max-width: 95%;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    margin-bottom: 50px;
 }
 
 #contactinfo {
     max-width: 100%;
     text-align: center;
+    
 
 
     a {
@@ -296,6 +293,7 @@
         font-size: 2em;
         text-decoration: underline;
         margin-bottom: 50px;
+        margin-top: 50px;
     }
 
     a {
@@ -359,13 +357,6 @@
 #about_us {
     margin-left: 2.5%;
     margin-right: 2.5%;
-
-#philosophy {
-
-    >img {
-        max-width: 85%;
-    }
-}
 }
 @media only screen and (min-width: 1024px) {
     #awards {
@@ -390,5 +381,13 @@
     }
     #about_us {
         width: 70%;
+    }
+
+    #gallery {
+        width: 65%;
+    }
+
+    #philosophy {
+        grid-template-rows: 0fr 0fr 300px;
     }
 }
